Avoid doubled and unnecessary scrollbars. For some reason, the left part of the partitioned space gets to wide. To avoid this, we prevent an overflow on the boards page.

--- a/frontend/src/app/modules/boards/board/board-partitioned-page/board-list-container.component.sass
+++ b/frontend/src/app/modules/boards/board/board-partitioned-page/board-list-container.component.sass
@@ -11,6 +11,7 @@ $board-list-max-width: 300px
 
   // Make it scrollable
   overflow-y: auto
+  @include styled-scroll-bar
 
 .boards-list-item-handle
   position: absolute
@@ -36,10 +37,12 @@ $board-list-max-width: 300px
   // Same height as board list header
   height: 42px
   line-height: 42px
-  margin: 5px 0 0 15px
   font-size: 14px
   cursor: pointer
   color: var(--gray-dark)
+
+  .boards-list--add-item-text
+    padding: 5px 15px 0 15px
 
   .boards-list--container.-free &
     margin-top: 0
